lldpd (0.7.14)
  * Features:
    + Shutdown LLPDU are sent on MSAP change and when lldpd exits.
  * Fix:
    + Incorrect boundary check when decoding management address and
      protocol identity may lead to lldpd crash when processing
      malformed LLDPDU.
    + Many edge cases where lldpd was leaving hanging processes after
      crashing.

lldpd (0.7.13)
  * Fix:
    + Unbreak customization of Unix socket path from command line.

lldpd (0.7.12)
  * Features:
    + Interface pattern, management pattern, system description,
      system platform and system hostname can be unconfigured to their
      default values.
  * Fix:
    + Don't complain when parsing a commented line.
    + Correctly persist configuration changes for "system interface
      promiscuous", "system interface description" "med fast-start
      enable", "pause" and "resume".
    + Fix listening on bond devices for old kernels (< 2.6.27).

lldpd (0.7.11)
  * Features:
    + Ship bash and zsh completion.
    + Abort when some command-line options are repeated.
  * Fix:
    + Handle correctly read failures in liblldpctl.

lldpd (0.7.10)
  * Features:
    + Ability to set promiscuous mode to work around bugs of some
      switches encapsulating LLDP frames inside 802.1Q frames.
    + JSON support for lldpcli can use json-c instead of jansson,
      thanks to Michel Stam.
  * Fix:
    + Fix checksum computation for Cisco CDP.
    + Fix ability to disable LLDP.
    + Fix seccomp sandbox, thanks to Patrick McLean.

lldpd (0.7.9)
  * Changes:
    + Default location for chroot, socket and PID are now configurable
      in `./configure`. The default location is based on the value of
      `runstatedir` which in turn may be based on the value of
      `localstatedir` which defaults to `/usr/local/var`. Therefore,
      to get the previous locations, lldpd should be configured with
      `./configure --localstatedir=/var`.
  * Fixes:
    + Fix `configure system bond-slave-src-mac-type local`. Also use