@@ -186,10 +186,11 @@ will not send any frame. It will only listen to neighbors.
 .It Fl m Ar management
 Specify the management addresses of this system. As for interfaces
 (described below), this option can use wildcards and inversions.
-Without this option, the first IPv4 and the first IPv6 are used. If
-only negative patterns are provided, only one IPv4 and one IPv6
-addresses are chosen. Otherwise, many of them can be selected. If you
-want to blacklist IPv6 addresses, you can use
+Without this option, the first IPv4 and the first IPv6 are used. If an
+exact IP address is provided, it is used as a management address
+without any check. If only negative patterns are provided, only one
+IPv4 and one IPv6 addresses are chosen. Otherwise, many of them can be
+selected. If you want to blacklist IPv6 addresses, you can use
 .Em !*:* .
 .It Fl u Ar file
 Specify the Unix-domain socket used for communication with
