@@ -1,6 +1,8 @@
 lldpd (0.7.14)
   * Features:
     + Shutdown LLPDU are sent on MSAP change and when lldpd exits.
+    + When an exact IP is provided as a management pattern, use it
+      unconditionally.
   * Fix:
     + Incorrect boundary check when decoding management address and
       protocol identity may lead to lldpd crash when processing
